tinyc/test/bad/false-redeclare-enum.c
int main()
{
    enum
    {
        false = 0,
    };
    return 0;
}
